--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,9 @@ services:
     name: brainbox-ai
     env: python
     plan: free
+    rootDir: .
     buildCommand: pip install -r requirements.txt
     startCommand: python run_server.py
     envVars:
-      - key: PORT
-        value: 10000
       - key: PYTHON_VERSION
         value: 3.11.4
